<resources>
    <string name="app_name">MOV001_ProyectoFinal_Ronald_Nacho</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="TitFragment2">Publicación</string>-->

    <string name="HintTitulo">Título del anuncio</string>
    <string name="HintNumHabitac">Número de habitaciones</string>

    <string name="HintPropietario">Propietario</string>
    <string name="btRegistrar">Registrar</string>
    <string name="btInicio">Inicio</string>
    <string name="btbuscafoto">Buscar imagen</string>
    <string name="btsubirfoto">Subir imagen</string>


    <string-array name="garage_spinner">
        <item>SI</item>
        <item>NO</item>
    </string-array>


    <string-array name="provincias_spinner">
        <item>SAN JOSE</item>
        <item>ALAJUELA</item>
        <item>CARTAGO</item>
        <item>HEREDIA</item>
        <item>PUNTARENAS</item>
        <item>GUANACASTE</item>
        <item>LIMON</item>
    </string-array>

    <string-array name="categorias_spinner">
        <item>CASA</item>
        <item>ALQUILER</item>
        <item>LOTE</item>
    </string-array>


</resources>
